--- a/app/frontend/templates/registration.html
+++ b/app/frontend/templates/registration.html
@@ -4,7 +4,8 @@
 {% block content %}
 
     <div class="form-signin text-center mt-4">
-        <form method="post">
+        <form method="post"
+              oninput='password_check.setCustomValidity(password_check.value != password.value ? "Passwords do not match." : "")'>
             <img class="mb-4" src="../static/logo.png" alt="" width="300" height="150">
             <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
@@ -17,11 +18,11 @@
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" name="password" id="floatingPassword" minlength="8" placeholder="Password" required>
+                <input type="password" class="form-control remove-glow" name=password id="floatingPassword" minlength="8" placeholder="Password" required>
                 <label for="floatingPassword">Password</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" name="password_check" id="floatingPassword" minlength="8" placeholder="Password" required>
+                <input type="password" class="form-control remove-glow" name=password_check id="floatingPassword" minlength="8" placeholder="Password" required>
                 <label for="floatingPassword">Repeat password</label>
             </div>
 
