--- a/app/frontend/templates/registration.html
+++ b/app/frontend/templates/registration.html
@@ -10,29 +10,60 @@
             <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
             <div class="form-floating">
-                <input type="text" class="form-control remove-glow" name="nickname" id="floatingInput" minlength="5" placeholder="Login" required>
+                <input type="text" class="form-control remove-glow" name="nickname" id="floatingInput" minlength="5"
+                       placeholder="Login" required>
                 <label for="floatingInput">Login</label>
             </div>
             <div class="form-floating">
-                <input type="email" class="form-control remove-glow" name="email" id="floatingInput" placeholder="name@example.com" required>
+                <input type="email" class="form-control remove-glow" name="email" id="floatingInput"
+                       placeholder="name@example.com" required>
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" name=password id="floatingPassword" minlength="8" placeholder="Password" required>
+                <input type="password" class="form-control remove-glow" name=password id="floatingPassword"
+                       minlength="8" placeholder="Password" required>
                 <label for="floatingPassword">Password</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control remove-glow" name=password_check id="floatingPassword" minlength="8" placeholder="Password" required>
+                <input type="password" class="form-control remove-glow" name=password_check id="floatingPassword"
+                       minlength="8" placeholder="Password" required>
                 <label for="floatingPassword">Repeat password</label>
             </div>
 
             <div class="checkbox mb-3 mt-3">
                 <label>
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <input type="checkbox" name="remember"> Remember me
                 </label>
             </div>
             <button class="w-100 btn btn-lg btn-primary text-light" type="submit">Sign in</button>
         </form>
     </div>
+
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+
+        {% for m in messages %}
+            <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+                <div class="toast-header">
+                    <strong class="me-auto">Message</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    {{ m }}
+                </div>
+            </div>
+
+        {% endfor %}
+
+    </div>
+
+{% endblock %}
+
+{% block scripts %}
+    <script>
+        var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+        var toastList = toastElList.map(function (toastEl) {
+            return new bootstrap.Toast(toastEl)
+        })
+    </script>
 
 {% endblock %}
