--- a/app/frontend/templates/tickets.html
+++ b/app/frontend/templates/tickets.html
@@ -5,22 +5,21 @@
 
     <div class="container col-xxl-8 px-2 py-2 bg-white">
         <div class="row flex-lg-row align-items-center g-0 py-5">
-                <div class="col-10 col-sm-8 col-lg-4 mb-3 mx-auto px-4 py-4 d-flex justify-content-center">
-                    {# TODO #}
-                    {% if session['user_photo'] %}
+            <div class="col-10 col-sm-8 col-lg-4 mb-3 mx-auto px-4 py-4 d-flex justify-content-center">
+                {% if session['user_photo'] %}
                     <img class="bg-light rounded-circle d-block img-cover text-white p-1" width="300" height="300"
                          alt="avatar"
                          src="{{ session['user_photo'] }}">
-                    {% else %}
+                {% else %}
                     <img class="bg-light rounded-circle d-block img-fluid text-white p-1" width="300" height="300"
                          alt="avatar"
                          src="https://raw.githubusercontent.com/twbs/icons/main/icons/person.svg">
-                    {% endif %}
-                </div>
-                <div class="col-lg-8">
-                    <h1 class="display-5 lh-1 mb-3 ms-3">{{ session['username'] }}</h1>
-                </div>
+                {% endif %}
             </div>
+            <div class="col-lg-8">
+                <h1 class="display-5 lh-1 mb-3 ms-3">{{ session['username'] }}</h1>
+            </div>
+        </div>
 
         <div class="container-fluid">
             <div class="d-flex align-items-start">
@@ -38,41 +37,32 @@
                 </div>
                 <div class="d-flex flex-column flex-grow-1 ms-5">
 
-                    {% for n in range(5) %} {# TODO #}
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-3">
-                                    <svg class="bd-placeholder-img card-img-top" width="100%" height="100%"
-                                         xmlns="http://www.w3.org/2000/svg" role="img"
-                                         aria-label="Placeholder: Thumbnail"
-                                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>
-                                        Placeholder</title>
-                                        <rect width="100%" height="100%" fill="#55595c"/>
-                                    </svg>
-                                </div>
-                                <div class="col">
-                                    <div class="card-body row">
-                                        <h5 class="card-title display-5">Concert name {{ n }}</h5>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md">
-                                            <div class="card-body">
+                    {% for tic in tickets %}
+                        <div class="card mb-3 shadow-sm ">
+                            <div class="card-body">
+                                <h5 class="card-title display-5">{{ tic['concert_name'] }}</h5>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item"><span class="h5">Price: </span> <span>{{ tic['price'] }}</span></li>
+                                    <li class="list-group-item">
+                                        <div class="row">
+                                            <div class="col-md">
                                                 <h5 class="card-title">Place</h5>
-                                                <p class="card-text text-truncate">Place</p>
+                                                <p class="card-text text-truncate">{{ tic['hall_name'] }}</p>
                                             </div>
-                                        </div>
-                                        <div class="col-md">
-                                            <div class="card-body">
+                                            <div class="col-md">
                                                 <h5 class="card-title">Date</h5>
-                                                <p class="card-text">date</p>
+                                                <p class="card-text">{{ tic['concert_date']|dt }}</p>
                                             </div>
                                         </div>
-                                    </div>
-                                    <a href="#"
-                                       class="stretched-link text-decoration-none"></a>
-                                </div>
+                                    </li>
+                                </ul>
+
+                                <a href="{{ url_for('concert_page', id=tic['concert_id']) }}"
+                                   class="stretched-link text-decoration-none"></a>
                             </div>
+
                         </div>
+
                     {% endfor %}
 
                 </div>
