--- a/app/frontend/templates/buying_confirm.html
+++ b/app/frontend/templates/buying_confirm.html
@@ -12,9 +12,11 @@
                 <div>
                     <a href="{{ url_for('concert_page', id=id) }}">Return to Concert Page</a>
                 </div>
-                <div>
-                    <a href="{{ url_for('tickets_page') }}">Proceed to Tickets</a>
-                </div>
+                {% if session['logged_in'] %}
+                    <div>
+                        <a href="{{ url_for('tickets_page') }}">Proceed to Tickets</a>
+                    </div>
+                {% endif %}
             </div>
         {% else %}
             <div class="alert alert-danger" role="alert">
